# storyline

./: .gitignore  README.md  file-diff.txt  pyproject.toml
.github/workflows/: release-all-in-one.yml  release-for-test.yml  release.yml  update-kor.yml
config/: custom_s2tw.json
data/opencc/: CustomCharacters.ocd2  CustomCharacters.txt
src/ptsd/: __init__.py  processor.py
src/ptsd/core/: __init__.py  models.py  paratranz.py  utils.py
